--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,10 @@
-Django==2.2.19
+asgiref==3.6.0
+Django==3.2.18
+django-filter==22.1
+djangorestframework==3.14.0
+importlib-metadata==6.0.0
+Markdown==3.4.1
 pytz==2022.7.1
 sqlparse==0.4.3
+typing_extensions==4.5.0
+zipp==3.14.0
