--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,7 @@ Django==3.2.18
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==4.8.0
+# djangorestframework-simplejwt==4.8.0
 djoser
 # djoser==2.1.0
 drf-extra-fields==3.4.1
