--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,11 +14,11 @@ djangorestframework==3.14.0
 djoser
 # djoser==2.1.0
 drf-extra-fields==3.4.1
-# flake8
+flake8
 flake8==5.0.4
 idna==3.4
-importlib-metadata
-# importlib-metadata==6.0.0
+# importlib-metadata
+importlib-metadata==6.0.0
 itypes==1.2.0
 Jinja2==3.1.2
 Markdown==3.4.1
