--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,8 @@ djangorestframework==3.14.0
 djoser
 # djoser==2.1.0
 drf-extra-fields==3.4.1
-flake8
+# flake8
+flake8==6.0.0
 # flake8==5.0.4
 idna==3.4
 # importlib-metadata
