--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,7 +19,8 @@ idna==3.4
 importlib-metadata==1.7.0
 itypes==1.2.0
 Jinja2==3.1.2
-Markdown==3.4.1
+# Markdown==3.4.1
+Markdown
 MarkupSafe==2.1.2
 mccabe==0.7.0
 oauthlib==3.2.2
