--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -43,5 +43,5 @@ uritemplate==4.1.1
 urllib3==1.26.14
 zipp==3.14.0
 reportlab==3.6.12
-gunicorn
-psycopg2-binary
+gunicorn==20.1.0
+psycopg2-binary==2.9.5
