--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -3,6 +3,7 @@ name: Foodgram app workflow
 on: [push]
 
 jobs:
+  
   tests:
     name: Tests
     runs-on: ubuntu-latest
@@ -23,4 +24,30 @@ jobs:
         pip install -r backend/requirements.txt
     - name: Test with flake8
       run: |
-        python -m flake8 
+        python -m flake8
+  
+  build_and_push_to_docker_hub:
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
+          file: backend/Dockerfile
