--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,8 +18,10 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+    restart: always
+    depends_on:
+      - frontend
 
   backend:
-    build:
-    context: ../backend
-    dockerfile: Dockerfile
+    image: solodnikov/foodgram_backend:latest
+    restart: always
