--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,37 @@
 server {
     listen 80;
+
+  # NEW_BEG
+    server_name 127.0.0.1;
+
+    server_tokens off;
+
+    location /media/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /static/ {
+        autoindex on;
+        root /var/html/;
+    }
+
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
+  # NEW_END
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
