--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,4 +1,9 @@
 version: '3.3'
+
+volumes:
+  static_value:
+  media_value:
+
 services:
 
   frontend:
@@ -18,6 +23,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/var/html/static_backend/
+      - media_value:/var/html/media/
     restart: always
     depends_on:
       - frontend
@@ -25,3 +32,6 @@ services:
   backend:
     image: solodnikov/foodgram_backend:latest
     restart: always
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
