Подготовка к 2 этапу ревью

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,12 +8,12 @@ server {
 
     location /media/ {
         autoindex on;
-        root /var/html/;
+        root /code/media/;
     }
 
     location /static/ {
         autoindex on;
-        root /var/html/;
+        root /code/static/;
     }
 
     location /api/ {
