--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/code/static/  #
+      - media_value:/code/media/    #
     restart: always
     depends_on:
       - frontend
