--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,6 +6,14 @@ volumes:
 
 services:
 
+  backend:
+    image: solodnikov/foodgram_backend:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+  
+  
   frontend:
     build:
       context: ../frontend
@@ -23,15 +31,10 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/code/static/  #
-      - media_value:/code/media/    #
+      - static_value:/var/html/static/  #
+      - media_value:/var/html/media/    #
     restart: always
     depends_on:
       - frontend
 
-  backend:
-    image: solodnikov/foodgram_backend:latest
-    restart: always
-    volumes:
-      - static_value:/code/static/
-      - media_value:/code/media/
+
