--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,12 +8,16 @@ server {
 
     location /media/ {
         autoindex on;
-        root /code/media/;
+        root /var/html;
     }
 
     location /static/ {
         autoindex on;
-        root /code/static/;
+        root /var/html;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
     }
 
     location /api/ {
