Подготовка к 2 этапу ревью

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,21 @@
 server {
     listen 80;
 
-  # NEW_BEG
+  #
     server_name 127.0.0.1;
 
     server_tokens off;
 
     location /media/ {
-        autoindex on;
         root /var/html;
     }
 
     location /static/ {
+        autoindex on;
+        root /var/html;
+    }
+
+    location /static/admin {
         autoindex on;
         root /var/html;
     }
@@ -34,7 +38,7 @@ server {
         proxy_pass http://backend:8000/admin/;
     }
 
-  # NEW_END
+  # 
 
     location /api/docs/ {
         root /usr/share/nginx/html;
