Подготовка к 2 этапу ревью

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -9,10 +9,10 @@ server {
         root /var/html;
     }
 
-    location /static/ {
-        autoindex on;
-        root /var/html;
-    }
+    # location /static/ {
+    #     autoindex on;
+    #     root /var/html;
+    # }
 
     location /static/admin {
         autoindex on;
