--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,8 +3,16 @@ version: '3.3'
 volumes:
   static_value:
   media_value:
+  db:
 
 services:
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - db:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
 
   backend:
     image: solodnikov/foodgram_backend:latest
@@ -12,8 +20,11 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-  
-  
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+    
   frontend:
     build:
       context: ../frontend
@@ -22,6 +33,7 @@ services:
       - ../frontend/:/app/result_build/
     depends_on:
       - backend
+      - db
 
   nginx:
     image: nginx:1.19.3
@@ -36,3 +48,4 @@ services:
     restart: always
     depends_on:
       - frontend
+      - backend
