--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -52,7 +52,39 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
           file: backend/Dockerfile
 
-
+  deploy:
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
+    name: Deploy to server from Docker Hub
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+          
+    - name: Executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          sudo docker compose stop
+          sudo docker compose rm foodgram_backend -f
+          # sudo docker image rm ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
+          cd ~
+          mkdir ${{ github.event.repository.name }}
+          cd ${{ github.event.repository.name }}
+          rm .env
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo DB_PORT=${{ secrets.SECRET_KEY }} >> .env
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+          sudo docker compose up -d --build
+          sudo docker ps
   # send_message:
   #   name: Send message to Telegramm
   #   runs-on: ubuntu-latest
