--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -82,7 +82,7 @@ jobs:
           echo DB_PORT=${{ secrets.SECRET_KEY }} >> .env
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
           # sudo docker compose up -d --build
-          sudo docker imadge ls
+          sudo docker image ls
           sudo docker ps
           ls
           pwd
