--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -53,11 +53,12 @@ jobs:
           file: backend/Dockerfile
 
       - name: Push to DockerHub (frontend)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./frontend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+          file: backend/Dockerfile
 
   # deploy:
   #   if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
