--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m flake8
   
-  build_and_push_to_docker_hub:
+  build_and_push_backend_to_docker_hub:
     if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -44,21 +44,44 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push to Docker Hub (backend)
+      - name: Push to Docker Hub
         uses: docker/build-push-action@v4
         with:
           context: ./backend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
           file: backend/Dockerfile
-
-      - name: Push to DockerHub (frontend)
-        uses: docker/build-push-action@v4
+  
+  build_and_push_frontend_to_docker_hub:
+    name: Pushing frontend image to Docker Hub
+    runs-on: ubuntu-latest
+    needs:
+      # - tests
+      - build_and_push_backend_to_docker_hub
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        uses: docker/login-action@v1
         with:
-          context: ./frontend/
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ./frontend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-          file: backend/Dockerfile
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
+
+      # - name: Push to DockerHub (frontend)
+      #   uses: docker/build-push-action@v4
+      #   with:
+      #     context: ./frontend/
+      #     push: true
+      #     tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+      #     file: backend/Dockerfile
 
   # deploy:
   #   if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
