--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
       # - name: Push to DockerHub (frontend)
       #   uses: docker/build-push-action@v4
@@ -83,40 +83,41 @@ jobs:
       #     tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
       #     file: backend/Dockerfile
 
-  # deploy:
-  #   if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
-  #   name: Deploy to server from Docker Hub
-  #   runs-on: ubuntu-latest
-  #   needs: build_and_push_to_docker_hub
-  #   steps:
+  deploy:
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
+    name: Deploy to server from Docker Hub
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
           
-  #   - name: Executing remote ssh commands to deploy
-  #     uses: appleboy/ssh-action@master
-  #     with:
-  #       host: ${{ secrets.HOST }}
-  #       username: ${{ secrets.USER }}
-  #       key: ${{ secrets.SSH_KEY }}
-  #       passphrase: ${{ secrets.PASSPHRASE }}
-  #       script: |
-  #         # sudo docker compose stop
-  #         # sudo docker compose rm foodgram_backend -f
-  #         cd ~
-  #         cd ${{ github.event.repository.name }}
-  #         rm .env
-  #         touch .env
-  #         echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-  #         echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-  #         echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-  #         echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-  #         echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-  #         echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-  #         echo DB_PORT=${{ secrets.SECRET_KEY }} >> .env
-  #         sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
-  #         sudo docker compose up -d --build
-  #         sudo docker image ls
-  #         sudo docker ps
-  #         ls
-  #         pwd
+    - name: Executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          # sudo docker compose stop
+          # sudo docker compose rm foodgram_backend -f
+          cd ~
+          cd ${{ github.event.repository.name }}
+          rm .env
+          touch .env
+          echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+          echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+          echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+          echo DB_PORT=${{ secrets.SECRET_KEY }} >> .env
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+          sudo docker compose up -d --build
+          sudo docker image ls
+          sudo docker ps
+          ls
+          pwd
 
   
   # send_message:
