--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -26,9 +26,10 @@ services:
       - ./.env
     
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: solodnikov/foodgram_frontend:latest
+    # build:
+    #   context: ../frontend
+    #   dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
