--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -28,7 +28,7 @@ jobs:
   
   build_and_push_backend_to_docker_hub:
     if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
-    name: Push Docker image to Docker Hub
+    name: Pushing Backend image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -53,21 +53,24 @@ jobs:
           file: backend/Dockerfile
   
   build_and_push_frontend_to_docker_hub:
-    name: Pushing frontend image to Docker Hub
+    if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
+    name: Pushing Frontend image to Docker Hub
     runs-on: ubuntu-latest
     needs:
-      # - tests
       - build_and_push_backend_to_docker_hub
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Login to Docker
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+  
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
@@ -75,21 +78,12 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
-      # - name: Push to DockerHub (frontend)
-      #   uses: docker/build-push-action@v4
-      #   with:
-      #     context: ./frontend/
-      #     push: true
-      #     tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-      #     file: backend/Dockerfile
-
   deploy:
     if: ${{ github.ref_name == 'master' || github.ref_name == 'main'}}
     name: Deploy to server from Docker Hub
     runs-on: ubuntu-latest
     needs: build_and_push_frontend_to_docker_hub
     steps:
-          
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
@@ -99,9 +93,11 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
           sudo docker compose stop
-          # sudo docker compose rm foodgram_backend -f
+          sudo docker compose rm ${{ secrets.DOCKER_USERNAME }}/foodgram_backend -f
+          sudo docker compose rm ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend -f
           cd ~
           cd ${{ github.event.repository.name }}
+          cd infra
           rm .env
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
@@ -114,22 +110,16 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
           sudo docker compose up -d --build
-          
-          # sudo docker image ls
-          # sudo docker ps
-          # ls
-          # pwd
 
-  
-  # send_message:
-  #   name: Send message to Telegramm
-  #   runs-on: ubuntu-latest
-  #   needs: deploy
-  #   steps:
+  send_message:
+    name: Send message to Telegramm
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
 
-  #   - name: send message
-  #     uses: appleboy/telegram-action@master
-  #     with:
-  #       to: ${{ secrets.TELEGRAM_TO }}
-  #       token: ${{ secrets.TELEGRAM_TOKEN }}
-  #       message: ${{ github.workflow }} - Successful push repository ${{ github.event.repository.name }} in adress ${{ github.repositoryUrl }} did ${{ github.actor }}. Reason - ${{ github.event.commits[0].message }}. Commit in adress - https://github.com/${{ github.repository }}/commit/${{github.sha}}
+    - name: send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} - Successful push repository ${{ github.event.repository.name }} in adress ${{ github.repositoryUrl }} did ${{ github.actor }}. Reason - ${{ github.event.commits[0].message }}. Commit in adress - https://github.com/${{ github.repository }}/commit/${{github.sha}}
