Test deploy to server

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name 84.201.136.137;
+    server_name 84.201.136.137 nymnym.bounceme.net;
 
     server_tokens off;
 
